docs & chore & typography update

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛖</text></svg>">
     <title>JoneCSS</title>
-    <link rel="stylesheet" href="./jonecss.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 
-<base href="./index.html" target="_blank">
-
-<dialog closed>Defines a dialog <wbr> box or window</dialog>
+<base href="./index.html">
 
 <noscript>
     Please enable JavaScript to use this site.
@@ -20,21 +20,11 @@
 <body data-layout="sidebar">
     <aside>
         <ul>
-            <h1>Socials</h1>
-            <a href="https://codepen.io/jonasfroeller">Codepen</a>
-            <a href="https://dev.to/jonasfroeller">DevTo</a>
-            <li>
-                <input type="radio" name="links" id="link1" checked>
-                <label for="link1">Link 1</label>
-            </li>
-            <li>
-                <input type="radio" name="links" id="link2">
-                <label for="link2">Link 2</label>
-            </li>
-            <li>
-                <input type="radio" name="links" id="link3">
-                <label for="link3">Link 3</label>
-            </li>
+            <h1>Elements</h1>
+            <li><a href="#about">about</a></li>
+            <li><a href="#quickstart">quickstart</a></li>
+            <li><a href="#customization">customization</a></li>
+            <li><a href="#covered">covered</a></li>
         </ul>
     </aside>
 
@@ -42,225 +32,75 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="./index.html" target="_self">HOME</a></li>
-                    <li><a href="#covered" target="_self">covered</a></li>
-                    <li><a href="#text" target="_self">text</a></li>
-                    <li><a href="#media" target="_self">media</a></li>
-                    <li><a href="#media-audio" target="_self">media-audio</a></li>
-                    <li><a href="#media-video" target="_self">media-video</a></li>
-                    <li><a href="#media-image" target="_self">media-image</a></li>
-                    <li><a href="#interactive" target="_self">interactive</a></li>
-                    <li><a href="#input" target="_self">input</a></li>
-                    <li><a href="#data" target="_self">data</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="./typography.html">typography</a></li>
+                    <li><a href="./media.html">media</a></li>
+                    <li><a href="./interactive.html">interactive/input</a></li>
+                    <li><a href="./data.html">data</a></li>
                 </ul>
             </nav>
         </header>
 
+        <!-- TODO: optgroup, output, param, picture, pre, progress, q, rp, rt, ruby, s, samp, -->
+        <!-- TODO: <dialog closed>Defines a dialog <wbr> box or window</dialog> -->
+
         <article>
-            <h1 id="covered">Covered Tags:</h1>
-            <div>
-                a, abbr, acronym, address, applet, area, article, aside, audio, b, base, bdi, bdo, big, blockquote,
-                body,
-                br,
-                button, canvas, caption, center, cite, code, col, colgroup, data, datalist, dd, del, details, dfn,
-                dialog,
-                dir, div, dl, dt, em, embed, fieldset, figcaption, figure, font, footer, form, frame, frameset, h1, h2,
-                h3,
-                h4, h5, h6, head, header, hr, html, i, iframe, img, input, ins, kbd, label, legend, li, link, main, map,
-                mark, meta, meter, nav, noframes, noscript, object, ol, optgroup, option, output, p, param, picture,
-                pre,
-                progress, q, rp, rt, ruby, s, samp, script, section, select, small, source, span, strong, style, sub,
-                summary, sup, svg, table, tbody, td, textarea, tfoot, th, thead, time, title, tr, track, tt,
-                u,
-                ul, var, video, wbr.
-            </div>
-            <hr>
-
-            <h2 id="text">Text:</h2>
-            <h1>Headline 1</h1>
-            <h2>Headline 2</h2>
-            <h3>Headline 3</h3>
-            <h4>Headline 4</h4>
-            <h5>Headline 5</h5>
-            <h6>Headline 6</h6>
-            <code>echo "hello world";</code> <br>
-            <kbd>Ctrl + C</kbd> <br>
-            <var>x = 5</var>
-            <blockquote cite="https://blog.hubspot.com/sales/famous-quotes">
-                "Many of life's failures are people who did not realize how close they were to success when they gave
-                up." -Thomas A. Edison
-            </blockquote>
-            <div>
-                <abbr
-                    title="Svelte means slender. It's used to describe people, not things, and it implies a certain elegance. You might say that a middle-aged woman who had kept a svelte figure could still pass for a sixteen-year-old girl.">
-                    Svelte
-                </abbr> <br>
-                <span>I am</span> <b>bold</b> & <strong>important</strong>, <i>italic</i> &
-                <em>emphasized</em>, <u>underlined</u>,
-                <del>strikethrough</del>, <mark>highlighted</mark>,
-                <small>smaller</small> <br>
-                <p>x<sub>2</sub></p>
-                <p>x<sup>2</sup></p>
-
-
-                <dd>Defines a description/value of a term in a description list</dd>
-                <del>Defines text that has been deleted from a document</del> <br>
-                <dfn>Specifies a term that is going to be defined within the content</dfn> <br>
-                <dl>
-                    <dt title="Defines a term/name in a description list">Coffee</dt>
-                    <dd>- black hot drink</dd>
-                </dl>
-                <bdi dir="rtl">Isolates a part of text that might be formatted in a different direction from other text
-                    outside
-                    it</bdi> <br>
-                <bdo dir="rtl">Overrides the current text direction</bdo> <br>
-                <ins>This text has been inserted into the document</ins> <br>
-                <data value="42">Adds a machine-readable translation of a given content</data>
-            </div>
-            <hr>
-
-            <h2 id="media">Media:</h2>
             <section>
-                <h3 id="media-audio">Audio:</h3>
-                <audio controls>
-                    <source src="./assets/demo-audio-lovers-walking.mp3"
-                        alt="https://pixabay.com/de/music/moderner-jazz-lovers-walking-110966/" type="audio/mpeg">
-                </audio>
+                <h1 id="about">About JoneCSS:</h1>
+                <p>
+                <h3 id="quickstart">Quick Start</h3>
 
-                <h3 id="media-video">Video:</h3>
-                <video controls>
-                    <source src="./assets/demo-video-frog.mp4"
-                        alt="https://pixabay.com/de/videos/frosch-schilf-gr%C3%BCn-113403" type="video/mp4">
-                    <track src="./assets/demo-video-subtitles.vtt" type="text/vtt" kind="subtitles" srclang="en"
-                        label="English">
-                </video>
+                Add the following css <code>&lt;link&gt;</code> to the <code>&lt;head&gt;</code> of your HTML
+                document:
+                <br>
 
-                <div class="iframe-box">
-                    <iframe src="https://www.example.com" title="example website content title"></iframe>
-                </div>
+                <pre class="code-oneliner">
+                    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jonasfroeller/JoneCSS/jonecss.css"&gt;
+                </pre>
 
-                <h3 id="media-image">Image:</h3>
-                <div>
-                    <figure>
-                        <img id="frog" src="./assets/demo-image-bird.jpg" alt="An example image">
-                        <figcaption>by <a
-                                href="https://pixabay.com/de/photos/vogel-europ%c3%a4isches-rotkehlchen-7930857/">sharkolot</a>
-                        </figcaption>
-                    </figure>
+                Or download the file <code>./jonecss.css</code> and add it to your project:
+                <br>
 
-                    <svg width="100" height="100">
-                        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
-                    </svg>
+                <pre class="code-oneliner">
+                    &lt;link rel="stylesheet" href="./jonecss.css"&gt;
+                </pre>
 
-                    <canvas id="myCanvas"></canvas>
-                </div>
+                To prevent <b>jonecss.css</b> from overwriting your own styles, make sure to import it as the
+                very
+                first CSS import.
+                <br><br>
+
+                <h3 id="customization">Customization</h3>
+                <p class="text-lead">You can customize the site by changing the css variables.</p><br>
+                <!-- TODO -->
+
+                You can customize the look and feel of <b>jonecss.css</b> by overwriting the CSS variables. For
+                example, to change the primary color, add the following code to your own CSS file, or if you
+                downloaded <b>jonecss.css</b>, just change the value in the file itself:
+
+                <pre>:root {--primary-color: orange;}</pre>
+                </p>
             </section>
-            <hr>
 
-            <h2 id="interactive">Interactive:</h2>
-            <button>Click me</button>
-            <details>
-                <summary>read more...</summary>
-                <p><a href="https://github.com/jonasfroeller">GitHub</a></p>
-            </details>
-            <hr>
-
-            <h2 id="input">Input:</h2>
-            <fieldset title="Groups related elements in a form">
-                <legend>Fieldset:</legend>
-                <label for="fname">First name:</label>
-                <input type="text" id="fname" name="fname"><br><br>
-                <label for="lname">Last name:</label>
-                <input type="text" id="lname" name="lname"><br><br>
-                <input list="browsers" name="browser" id="browser">
-                <datalist id="browsers">
-                    <option value="Edge">
-                    <option value="Firefox">
-                    <option value="Chrome">
-                    <option value="Opera">
-                    <option value="Safari">
-                </datalist>
-                <input type="submit" value="Submit">
-            </fieldset>
-            <form>
-                <legend>Form:</legend>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username">
-                <input type="submit" value="Submit">
-            </form>
-            <textarea rows="4" cols="50">
-                This is a multiline text area
-            </textarea> <br>
-            <select>
-                <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-                <option value="audi">Audi</option>
-            </select>
-            <hr>
-
-            <h2 id="data">Data:</h2>
-            <ul>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-            </ul>
-            <ol>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-            </ol>
-
-            <h3>Meter:</h3>
-            <meter value="75" min="0" max="100">75%</meter>
-
-            <h3>Document:</h3>
-            <div class="object-box">
-                <object data="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf"></object>
-            </div>
-
-            <div class="embed-box">
-                <embed src="./jonecss.css" type="audio/mpeg" height="60" width="144">
-            </div>
-
-            <h3>Map:</h3>
-            <img src="https://picsum.photos/200" usemap="#map">
-
-            <map name="map">
-                <area shape="rect" coords="0,0,20,20" alt="Floor" href="#">
-                <area shape="circle" coords="30,30,10" alt="Sun" href="#">
-            </map>
-
-            <h3>Table:</h3>
-            <table>
-                <caption>Table Caption</caption>
-                <colgroup>
-                    <col span="1" style="color: var(--contrast-color);">
-                    <col span="2" style="color: var(--secondary-color);">
-                </colgroup>
-                <thead>
-                    <tr>
-                        <th>Header 1</th>
-                        <th>Header 2</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Cell 1</td>
-                        <td>Cell 2</td>
-                    </tr>
-                    <tr>
-                        <td>Cell 3</td>
-                        <td>Cell 4</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td>Footer 1</td>
-                        <td>Footer 2</td>
-                    </tr>
-                </tfoot>
-            </table>
+            <section>
+                <h2 id="covered">Covered Tags:</h2>
+                <p>
+                    a, abbr, address, area, article, aside, audio, b, base, bdi, bdo, blockquote,
+                    body, br, button, canvas, caption, cite, code, col, colgroup, data, datalist, dd, del, details, dfn,
+                    dialog, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1,
+                    h2,
+                    h3, h4, h5, h6, head, header, hr, html, i, iframe, img, input, ins, kbd, label, legend, li, link,
+                    main,
+                    map,
+                    mark, meta, meter, nav, noscript, object, ol, optgroup, option, output, p, param, picture,
+                    pre,
+                    progress, q, rp, rt, ruby, s, samp, script, section, select, small, source, span, strong, style,
+                    sub,
+                    summary, sup, svg, table, tbody, td, textarea, tfoot, th, thead, time, title, tr, track,
+                    u,
+                    ul, var, video, wbr.
+                </p>
+            </section>
         </article>
 
         <footer>
